# evmdeposit

evmdeposit/: CMakeLists.txt  README.txt
evmdeposit/include/: evmdeposit.hpp  util.hpp
evmdeposit/src/: CMakeLists.txt  evmdeposit.cpp
